--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL =http://3.83.115.190:7070/
-SKIP_PREFLIGHT_CHECK=true 
+REACT_APP_API_URL = http://3.83.115.190:7070/
+SKIP_PREFLIGHT_CHECK= true 
